Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjTextField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        text var = "text"
        return var
    end
end